kubernetes/configs/ingress-class.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller
  parameters:
    apiGroup: k8s.example.com
    kind: IngressParameters
    name: traefik
    namespace: default
    scope: Namespace
