kubernetes/configs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organizer-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  # ingressClassName: traefik
  rules:
    - host: myapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
spec:
  stripPrefixRegex:
    regex:
      - /api/
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
  routes:
    - kind: Rule
      match: Host(`myapp.com`) && PathPrefix(`/`)
      services:
        - name: front-end-service
          port: 80
    - kind: Rule
      match: Host(`myapp.com`) && PathPrefix(`/api/events`)
      middlewares:
        - name: strip-api-prefix
      services:
        - name: event-service
          port: 3000
    - kind: Rule
      match: Host(`myapp.com`) && PathPrefix(`/api/users`)
      middlewares:
        - name: strip-api-prefix
      services:
        - name: user-service
          port: 3000
    - kind: Rule
      match: Host(`myapp.com`) && PathPrefix(`/api/participations`)
      middlewares:
        - name: strip-api-prefix
      services:
        - name: participation-service
          port: 3000
